be/src/scheduling/admission-controller.cc
@@ -115,18 +115,19 @@ const string PROFILE_INFO_VAL_QUEUE_DETAIL = "waited $0 ms, reason: $1";
 // Error status string details
 const string REASON_MEM_LIMIT_TOO_LOW_FOR_RESERVATION =
     "minimum memory reservation is greater than memory available to the query "
-    "for buffer reservations. Mem available for buffer reservations based on mem_limit: "
-    "$0, memory reservation needed: $1. Set mem_limit to at least $2. See the query "
-    "profile for more information.";
+    "for buffer reservations. Memory reservation needed given the current plan: $0. Set "
+    "mem_limit to at least $1. Note that changing the mem_limit may also change the "
+    "plan. See the query profile for more information about the per-node memory "
+    "requirements.";
 const string REASON_BUFFER_LIMIT_TOO_LOW_FOR_RESERVATION =
     "minimum memory reservation is greater than memory available to the query "
-    "for buffer reservations. Mem available for buffer reservations based on "
-    "buffer_pool_limit: $0, memory reservation needed: $1. See the query profile for "
-    "more information.";
+    "for buffer reservations. Increase the buffer_pool_limit to $0. See the query "
+    "profile for more information about the per-node memory requirements.";
 const string REASON_MIN_RESERVATION_OVER_POOL_MEM =
-    "minimum memory reservation needed is greater than pool max mem resources. pool "
-    "max mem resources: $0, cluster-wide memory reservation needed: $1. See the query "
-    "profile for more information.";
+    "minimum memory reservation needed is greater than pool max mem resources. Pool "
+    "max mem resources: $0. Cluster-wide memory reservation needed: $1. Increase the "
+    "pool max mem resources. See the query profile for more information about the "
+    "per-node memory requirements.";
 const string REASON_DISABLED_MAX_MEM_RESOURCES =
     "disabled by pool max mem resources set to 0";
 const string REASON_DISABLED_REQUESTS_LIMIT = "disabled by requests limit set to 0";
@@ -415,10 +416,9 @@ bool AdmissionController::RejectImmediately(QuerySchedule* schedule,
   // Checks related to the min buffer reservation against configured query memory limits:
   if (schedule->query_options().__isset.buffer_pool_limit &&
       schedule->query_options().buffer_pool_limit > 0) {
-    const int64_t buffer_pool_limit = schedule->query_options().buffer_pool_limit;
-    if (max_min_reservation_bytes > buffer_pool_limit) {
+    if (max_min_reservation_bytes > schedule->query_options().buffer_pool_limit) {
       *rejection_reason = Substitute(REASON_BUFFER_LIMIT_TOO_LOW_FOR_RESERVATION,
-          PrintBytes(buffer_pool_limit), PrintBytes(max_min_reservation_bytes));
+          PrintBytes(max_min_reservation_bytes));
       return true;
     }
   } else if (schedule->query_options().__isset.mem_limit &&
@@ -430,8 +430,7 @@ bool AdmissionController::RejectImmediately(QuerySchedule* schedule,
       const int64_t required_mem_limit =
           ReservationUtil::GetMinMemLimitFromReservation(max_min_reservation_bytes);
       *rejection_reason = Substitute(REASON_MEM_LIMIT_TOO_LOW_FOR_RESERVATION,
-          PrintBytes(mem_limit), PrintBytes(max_min_reservation_bytes),
-          PrintBytes(required_mem_limit));
+          PrintBytes(max_min_reservation_bytes), PrintBytes(required_mem_limit));
       return true;
     }
   }
